# splink_data_generation

./: Dockerfile  README.md  estimate_splink.py  generate_data.py  generate_data_random.py  index.ipynb  pyproject.toml  test.py  test_cov.py  test_m_value_estimate.py  test_splink_estimates_params.py
examples/: cov.py  m_value_estimate.py  splink_estimates_params.py  test_splink_estimates_params.py
notebooks/: 01_estimate_known_params.ipynb  02_convergence_problems.ipynb  03_blocking_param_estimimates.ipynb  04_correlations.ipynb  05_effect_of_multiple_blocking_rules.ipynb  generate_exact_and_splink.ipynb
splink_data_generation/: estimate_splink.py  generate_data_exact.py  generate_data_random.py  log_likelihood.py  match_prob.py
tests/: conftest.py  settings.py  test_covariance.py  test_prob_ll.py
