[tool.poetry]
name = "splink_data_generation"
version = "0.2.0"
description = "Generate synthetic data with a specified data generating process"
authors = ["Robin Linacre <robinlinacre@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.19.4"
pandas = "^1.1.4"
splink = ">=0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
