[tool.poetry]
name = "splink_data_generation"
version = "0.2.1"
description = "Generate synthetic data with a specified data generating process"
authors = ["Robin Linacre <robinlinacre@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.13.3"
pandas = "^1.0.0"
splink = ">=1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
